<resources>
    <string name="app_name">Car Control</string>
    <string name="motor_topic">/uc_bridge/set_motor_level_msg</string>
    <string name="steering_topic">/uc_bridge/set_steering_level_msg</string>
    <string name="camera_topic">/kinect2/qhd/image_color/compressed</string>
    <string name="laser_scan_topic">/scan</string>
    <string name="odometry_topic">/odom</string>
    <string name="usl_topic">/uc_bridge/usl</string>
    <string name="usr_topic">/uc_bridge/usr</string>
    <string name="usf_topic">/uc_bridge/usf</string>
    <string name="imu_topic">/uc_bridge/imu</string>
    <string name="mag_topic">/uc_bridge/mag</string>
    <string name="vdbat_topic">/uc_bridge/vdbat</string>
    <string name="vsbat_topic">/uc_bridge/vsbat</string>
    <string name="mode_control_topic">/carControlApp/mode_control</string>
    <string name="joy_pref_title">Motor Level</string>
    <string name="steering_pref_title">Steering Level</string>
    <string name="laser_pref_title">Laser Scan</string>
    <string name="camera_pref_title">Image</string>
    <string name="topic_pref_title">Topics</string>
    <string name="warning_enable_pref_title">Enable Warning System</string>
    <string name="mode_control_pref_title">Mode Control</string>
    <string name="odometry_pref_title">Odometry</string>
    <string name="usl_pref_title">Left US Sensor:</string>
    <string name="usr_pref_title">Right US Sensor:</string>
    <string name="usf_pref_title">Front US Sensor:</string>
    <string name="imu_pref_title">IMU:</string>
    <string name="mag_pref_title">Magnetometer:</string>
    <string name="vdbat_pref_title">Drive Battery:</string>
    <string name="vsbat_pref_title">System Battery:</string>
    <string name="laser_scan_detail_pref_title">Laser Scan Detail</string>
    <string name="motor_limit_pref_title">Motor Level Limit</string>
    <string name="random_walk_range_minimum_pref_title">Random Walk Range Minimum</string>
    <string name="warning_pref_title">Warning System</string>
    <string name="warning_mindist_pref_title">Warning Distance</string>
    <string name="warning_safemode_pref_title">Safe Mode</string>
    <string name="warning_beep_pref_title">Warning Beeps</string>
    <string name="prefs_joystick_topic_edittext_key">prefs_joystick_topic_edittext</string>
    <string name="prefs_steering_topic_edittext_key">prefs_steering_topic_edittext</string>
    <string name="prefs_laserscan_topic_edittext_key">prefs_laserscan_topic_edittext</string>
    <string name="prefs_camera_topic_edittext_key">prefs_camera_topic_edittext</string>
    <string name="prefs_mode_control_topic_edittext_key">prefs_mode_control_topic_edittext</string>
    <string name="prefs_odometry_topic_edittext_key">prefs_odometry_topic_edittext</string>
    <string name="prefs_usl_topic_edittext_key">prefs_usl_topic_edittext</string>
    <string name="prefs_usr_topic_edittext_key">prefs_usr_topic_edittext</string>
    <string name="prefs_usf_topic_edittext_key">prefs_usf_topic_edittext</string>
    <string name="prefs_imu_topic_edittext_key">prefs_imu_topic_edittext</string>
    <string name="prefs_mag_topic_edittext_key">prefs_mag_topic_edittext</string>
    <string name="prefs_vdbat_topic_edittext_key">prefs_vdbat_topic_edittext</string>
    <string name="prefs_vsbat_topic_edittext_key">prefs_vsbat_topic_edittext</string>
    <string name="prefs_warning_checkbox_key">prefs_warning_checkbox</string>
    <string name="prefs_warning_mindist_key">prefs_warning_mindist</string>
    <string name="prefs_warning_system_key">prefs_warning_system</string>
    <string name="prefs_warning_safemode_key">prefs_warning_safemode</string>
    <string name="prefs_warning_beep_key">prefs_warning_beep_key</string>
    <string name="topic_pref_summary">Edit default topic names</string>
    <string name="warning_enable_pref_summary_off">Enable the Warning System for detecting imminent collisions</string>
    <string name="warning_enable_pref_summary_on">Disable the Warning System for detecting imminent collisions</string>
    <string name="warning_pref_summary">Edit Warning System settings</string>
    <string name="joy_pref_summary">
        Topic to publish the motor level.\nExpected message type: std_msgs/Int16\nValue: %s
    </string>
    <string name="steering_pref_summary">
        Topic to publish the steering level.\nExpected message type: std_msgs/Int16\nValue: %s
    </string>
    <string name="laser_pref_summary">
        Topic that the laser scan widget subscribes to.\nExpected message type: sensor_msgs/LaserScan\nValue: %s
    </string>
    <string name="camera_pref_summary">
        Topic that the camera widget subscribes to.\nExpected message type: sensor_msgs/CompressedImage\nValue: %s
    </string>
    <string name="odometry_pref_summary">
        Topic that the application gets odometry data from.\nExpected message type: nav_msgs/Odometry\nValue: %s
    </string>
    <string name="usl_pref_summary">
        Topic of the left ultrasonic sensor.\nExpected message type: sensor_msgs/Range\nValue: %s
    </string>
    <string name="usr_pref_summary">
        Topic of the right ultrasonic sensor.\nExpected message type: sensor_msgs/Range\nValue: %s
    </string>
    <string name="usf_pref_summary">
        Topic of the front ultrasonic sensor.\nExpected message type: sensor_msgs/Range\nValue: %s
    </string>
    <string name="imu_pref_summary">
        Topic of the imu data.\nExpected message type: sensor_msgs/Imu\nValue: %s
    </string>
    <string name="mag_pref_summary">
        Topic of the magnetometer data.\nExpected message type: sensor_msgs/MagneticField\nValue: %s
    </string>
    <string name="vdbat_pref_summary">
        Topic of the motor battery state.\nExpected message type: sensor_msgs/BatteryState\nValue: %s
    </string>
    <string name="vsbat_pref_summary">
        Topic of the system battery state.\nExpected message type: sensor_msgs/BatteryState\nValue: %s
    </string>
    <string name="mode_control_pref_summary">Topic to publish the mode control.
        \nExpected message type: std_msgs/String
        \nValue: %s
    </string>
    <string name="laser_scan_detail_pref_summary">Sets the detail level of the laser scan visualization.
        A higher number will draw more laser points\nValue: %s
    </string>
      <string name="motor_limit_pref_summary">Sets a limit for the motor level, in order
          to prevent accidents by remote controlling. (Min: 0, Max: 1000)\nValue: %s
    </string>
    <string name="random_walk_range_minimum_pref_summary">This is the minimum sensed range where
        the random walk algorithm will stop and turn\nValue: %s</string>
    <string name="enable_kinect_pref_title">Enable Kinect</string>
    <string name="enable_kinect_pref_summary_off">Enable to receive images from the kinect. This increase the power consumption</string>
    <string name="enable_kinect_pref_summary_on">Disable to stop receiving images from the kinect and to reduce power consumption</string>
    <string name="warning_mindist_pref_summary">The minimum distance considered safe when moving at full speed\nValue: %s</string>
    <string name="warning_safemode_pref_summary_off">Enable to prevent the Car from driving into walls</string>
    <string name="warning_safemode_pref_summary_on">Disable to allow the Car to crash into walls</string>
    <string name="warning_beep_pref_summary_off">Enable warning beeps</string>
    <string name="warning_beep_pref_summary_on">Disable warning beeps</string>
    <string name="add_robot">Add Car</string>
    <string name="edit_robot">Edit Car</string>
    <string name="add_edit_robot">Add/Edit Car</string>
    <string name="robot_name_hint">Car Name</string>
    <string name="chooser_uri_hint">Master URI</string>
    <string name="no_robots">No Cars. Add a new one!</string>
    <string-array name="chooser_titles">
        <item>Select Car</item>
        <item>Help</item>
        <item>About</item>
    </string-array>
    <string name="master_uri_key">MASTER_URI</string>
    <string name="delete">Delete</string>
    <string name="stop"></string>
    <string name="start">START</string>
    <string name="center">Center View</string>
    <string name="show_advanced_options">Show Advanced Options</string>
    <string name="ok">OK</string>
    <string-array name="feature_titles">
        <item>Select Car</item>
        <item>Overview</item>
        <item>Camera</item>
        <item>Car</item>
        <item>Telemetry</item>
        <item>Preferences</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="percent_string">%1$d%%</string>
    <string name="speed_string">%1$5.2f m/s</string>
    <string name="x_telemetry_string">x: %1$5.2f m</string>
    <string name="y_telemetry_string">y: %1$5.2f m</string>
    <string name="driven_distance_telemetry_string">driven_distance: %1$5.2f m</string>
    <string name="v_x_telemetry_string">vx: %1$5.2f m/s</string>
    <string name="v_y_telemetry_string">vy: %1$5.2f m/s</string>
    <string name="speed_telemetry_string">speed: %1$5.2f m/s</string>
    <string name="a_x_telemetry_string">ax: %1$5.2f m/s²</string>
    <string name="a_y_telemetry_string">ay: %1$5.2f m/s²</string>
    <string name="a_z_telemetry_string">az: %1$5.2f m/s²</string>
    <string name="g_x_telemetry_string">turning_rate_x: %1$5.2f °/s</string>
    <string name="g_y_telemetry_string">turning_rate_y: %1$5.2f °/s</string>
    <string name="g_z_telemetry_string">turning_rate_z: %1$5.2f °/s</string>
    <string name="yaw_telemetry_string">yaw: %1$5.2f °</string>
    <string name="rsf_telemetry_string">range_sensor_front: %1$5.2f m</string>
    <string name="rsl_telemetry_string">range_sensor_left: %1$5.2f m</string>
    <string name="rsr_telemetry_string">range_sensor_right: %1$5.2f m</string>
    <string name="battery_system_telemetry_string">system_battery_voltage: %1$5.2f V</string>
    <string name="battery_motor_telemetry_string">motor_battery_voltage: %1$5.2f V</string>
    <string name="joystick_control">Joystick Control</string>
    <string name="simple_round_trip_control">Follow Wall</string>
    <string name="round_trip_obstacles_control">Round trip with Obstacles</string>
    <string name="park_car_control">Park Car</string>
    <string name="lane_detection_control">Lane Detection</string>
    <string name="exploration_control">Exploration</string>
    <string name="prefs_advanced_control_settings_key">prefs_advanced_control_settings</string>
    <string name="prefs_advanced_control_settings_summary">Edit advanced control settings</string>
    <string name="advanced_controls__pref_title">Advanced Controls</string>
    <string name="reverse_angle_reading_summary_off"><![CDATA[Invert Angle Reading (Min->Max Angle)]]></string>
    <string name="reverse_angle_reading_summary_on"><![CDATA[Invert Angle Reading (Max->Min Angle)]]></string>
    <string name="reverse_angle_reading_title">Invert Laser Scan</string>
    <string name="prefs_motor_limit_key">prefs_motor_limit_key</string>
    <string name="prefs_reverse_angle_reading_key">prefs_reverse_angle_reading_key</string>
    <string name="prefs_invert_x_axis_key">prefs_invert_x_axis_key</string>
    <string name="prefs_invert_angular_velocity_key">prefs_invert_angular_velocity_key</string>
    <string name="invert_angular_velocity_summary">Invert angular velocity driving direction</string>
    <string name="invert_x_axis_summary">Invert X-Axis driving direction</string>
    <string name="invert_x_axis_title">Invert X-Axis</string>
    <string name="invert_angular_velocity_title">Invert Angular Velocity</string>
    <string name="invert_y_axis_title">Invert Y-Axis</string>
    <string name="invert_y_axis_summary">Invert Y-axis driving direction</string>
    <string name="prefs_invert_y_axis_key">prefs_invert_y_axis_key</string>
</resources>