<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preferences">

    <!--<Preference-->
    <!--android:title="Topic Settings"-->
    <!--android:enabled="false"-->
    <!--android:selectable="false"/>-->

    <!-- Separate screen for topics -->
    <PreferenceScreen
        android:icon="@drawable/ic_action_topics"
        android:summary="@string/topic_pref_summary"
        android:title="@string/topic_pref_title">

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/motor_topic"
            android:key="@string/prefs_joystick_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/joy_pref_summary"
            android:title="@string/joy_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/steering_topic"
            android:key="@string/prefs_steering_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/steering_pref_summary"
            android:title="@string/steering_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/laser_scan_topic"
            android:key="@string/prefs_laserscan_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/laser_pref_summary"
            android:title="@string/laser_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/camera_topic"
            android:key="@string/prefs_camera_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/camera_pref_summary"
            android:title="@string/camera_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/odometry_topic"
            android:key="@string/prefs_odometry_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/odometry_pref_summary"
            android:title="@string/odometry_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/usl_topic"
            android:key="@string/prefs_usl_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/usl_pref_summary"
            android:title="@string/usl_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/usr_topic"
            android:key="@string/prefs_usr_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/usr_pref_summary"
            android:title="@string/usr_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/usf_topic"
            android:key="@string/prefs_usf_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/usf_pref_summary"
            android:title="@string/usf_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/imu_topic"
            android:key="@string/prefs_imu_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/imu_pref_summary"
            android:title="@string/imu_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/mag_topic"
            android:key="@string/prefs_mag_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/mag_pref_summary"
            android:title="@string/mag_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/vdbat_topic"
            android:key="@string/prefs_vdbat_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/vdbat_pref_summary"
            android:title="@string/vdbat_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/vsbat_topic"
            android:key="@string/prefs_vsbat_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/vsbat_pref_summary"
            android:title="@string/vsbat_pref_title" />

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="@string/mode_control_topic"
            android:key="@string/prefs_mode_control_topic_edittext_key"
            android:singleLine="true"
            android:summary="@string/mode_control_pref_summary"
            android:title="@string/mode_control_pref_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_settings_ethernet_black_24dp"
        android:key="@string/prefs_advanced_control_settings_key"
        android:summary="@string/prefs_advanced_control_settings_summary"
        android:title="@string/advanced_controls__pref_title">

        <com.robotca.ControlApp.Views.BetterEditTextPreference
            android:defaultValue="600"
            android:inputType="number"
            android:key="@string/prefs_motor_limit_key"
            android:singleLine="true"
            android:summary="@string/motor_limit_pref_summary"
            android:title="@string/motor_limit_pref_title" />

        <SwitchPreference
            android:checked="false"
            android:defaultValue="false"
            android:key="@string/prefs_reverse_angle_reading_key"
            android:summaryOff="@string/reverse_angle_reading_summary_off"
            android:summaryOn="@string/reverse_angle_reading_summary_on"
            android:title="@string/reverse_angle_reading_title" />

        <SwitchPreference
            android:checked="false"
            android:defaultValue="false"
            android:key="@string/prefs_invert_x_axis_key"
            android:summaryOff="@string/invert_x_axis_summary"
            android:summaryOn="@string/invert_x_axis_summary"
            android:title="@string/invert_x_axis_title" />

        <SwitchPreference
            android:checked="false"
            android:defaultValue="false"
            android:key="@string/prefs_invert_y_axis_key"
            android:summaryOff="@string/invert_y_axis_summary"
            android:summaryOn="@string/invert_y_axis_summary"
            android:title="@string/invert_y_axis_title" />

        <SwitchPreference
            android:checked="false"
            android:defaultValue="false"
            android:key="@string/prefs_invert_angular_velocity_key"
            android:summaryOff="@string/invert_angular_velocity_summary"
            android:summaryOn="@string/invert_angular_velocity_summary"
            android:title="@string/invert_angular_velocity_title" />
    </PreferenceScreen>

</PreferenceScreen>