<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/action_joystick_control"
              android:title="@string/joystick_control" />

        <item android:id="@+id/action_simple_round_trip_control"
            android:title="@string/simple_round_trip_control"/>

        <item android:id="@+id/action_round_trip_obstacles_control"
            android:title="@string/round_trip_obstacles_control"/>

        <item android:id="@+id/action_park_car_control"
            android:title="@string/park_car_control"/>

        <item android:id="@+id/action_lane_detection_control"
              android:title="@string/lane_detection_control"/>

        <item android:id="@+id/action_exploration_control"
            android:title="@string/exploration_control"/>
    </group>

</menu>